--- a/package.json
+++ b/package.json
@@ -2,19 +2,62 @@
   "name": "y-protocols-mock",
   "version": "1.0.0",
   "files": [
-    "dist"
+    "dist/*",
+    "auth.*",
+    "sync.*",
+    "awareness.*"
   ],
   "scripts": {
-    "clean": "rm -rf dist",
-    "push": "make(){ if [[ -z \"$1\" ]]; then echo Commit message should not be empty. ;exit 1; fi; git add .; git commit -m \"$1\"; git push; }; make "
+    "clean": "rm -rf dist *.d.ts */*.d.ts *.d.ts.map */*.d.ts.map",
+    "dist": "rm -rf dist && rollup -c",
+    "test": "npm run lint && npm run dist && node dist/test.cjs",
+    "lint": "standard && tsc",
+    "types": "tsc --outDir .",
+    "debug": "rollup -c && concurrently 'rollup -wc' 'http-server -o test.html'",
+    "preversion": "npm run dist && npm run test && npm run types",
+    "postpublish": "npm run clean"
+  },
+  "standard": {
+    "ignore": [
+      "/dist",
+      "/node_modules"
+    ]
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    "./sync.js": "./sync.js",
+    "./dist/sync.cjs": "./dist/sync.cjs",
+    "./sync": {
+      "module": "./sync.js",
+      "import": "./sync.js",
+      "require": "./dist/sync.cjs"
+    },
+    "./awareness.js": "./awareness.js",
+    "./dist/awareness.cjs": "./dist/awareness.cjs",
+    "./awareness": {
+      "module": "./awareness.js",
+      "import": "./awareness.js",
+      "require": "./dist/awareness.cjs"
+    },
+    "./auth.js": "./auth.js",
+    "./dist/auth.cjs": "./dist/auth.cjs",
+    "./auth": {
+      "module": "./auth.js",
+      "import": "./auth.js",
+      "require": "./dist/auth.cjs"
+    }
   },
   "dependencies": {
-    "lib0": "^0.2.65",
-    "lib0-typescript": "github:ObuchiYuki/lib0-typescript",
-    "typescript": "^4.9.5",
-    "yjs": "github:ObuchiYuki/yjs-typescript"
+    "lib0": "^0.2.66",
+    "yjs-typescript": "github:ObuchiYuki/yjs-typescript"
   },
   "devDependencies": {
-    "y-protocols": "^1.0.5"
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@types/node": "^18.15.0",
+    "concurrently": "^5.3.0",
+    "rollup": "^2.79.1",
+    "standard": "^12.0.1",
+    "typescript": "^4.9.5"
   }
 }
