--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "y-protocols-mock",
   "version": "1.0.3",
   "files": [
-    "dist/*",
-    "auth.*",
-    "sync.*",
-    "awareness.*"
+    "dist"
   ],
   "scripts": {
     "clean": "rm -rf dist *.d.ts */*.d.ts *.d.ts.map */*.d.ts.map",
     "dist": "rm -rf dist && rollup -c",
     "test": "npm run lint && npm run dist && node dist/test.cjs",
     "lint": "standard && tsc",
-    "types": "tsc --outDir .",
+    "types": "tsc",
     "debug": "rollup -c && concurrently 'rollup -wc' 'http-server -o test.html'",
     "preversion": "npm run dist && npm run test && npm run types",
     "postpublish": "npm run clean"
@@ -22,30 +19,6 @@
       "/dist",
       "/node_modules"
     ]
-  },
-  "exports": {
-    "./package.json": "./package.json",
-    "./sync.js": "./sync.js",
-    "./dist/sync.cjs": "./dist/sync.cjs",
-    "./sync": {
-      "module": "./sync.js",
-      "import": "./sync.js",
-      "require": "./dist/sync.cjs"
-    },
-    "./awareness.js": "./awareness.js",
-    "./dist/awareness.cjs": "./dist/awareness.cjs",
-    "./awareness": {
-      "module": "./awareness.js",
-      "import": "./awareness.js",
-      "require": "./dist/awareness.cjs"
-    },
-    "./auth.js": "./auth.js",
-    "./dist/auth.cjs": "./dist/auth.cjs",
-    "./auth": {
-      "module": "./auth.js",
-      "import": "./auth.js",
-      "require": "./dist/auth.cjs"
-    }
   },
   "dependencies": {
     "lib0": "^0.2.66",
