--- a/package.json
+++ b/package.json
@@ -4,29 +4,19 @@
   "files": [
     "dist"
   ],
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean ; tsc",
     "push": "make(){ if [[ -z \"$1\" ]]; then echo Commit message should not be empty. ;exit 1; fi; npm run build; git add .; git commit -m \"$1\"; git push; }; make "
-  },
-  "standard": {
-    "ignore": [
-      "/dist",
-      "/node_modules"
-    ]
   },
   "dependencies": {
     "lib0": "^0.2.66",
     "yjs-typescript": "github:ObuchiYuki/yjs-typescript"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
     "@types/node": "^18.15.0",
     "concurrently": "^5.3.0",
-    "rollup": "^2.79.1",
-    "standard": "^12.0.1",
     "typescript": "^4.9.5"
   }
 }
